<resources>
    <string name="app_name">21.Days</string>

    <string name="title_activity_profile">ProfileActivity</string>
    <string name="action_settings">Settings</string>
    <string name="habits_fragment_title">Habits</string>
    <string name="analytics_fragment_title">Analytics</string>
    <string name="settings_fragment_title">Settings</string>

    <string name="analytics_default_comment">So many good habits! Keep up the good work!</string>
    <string name="analytics_ongoing_habits">Ongoing Habits</string>
    <string name="analytics_completed_habits">Completed Habits</string>
    <string name="analytics_longest_streak">Longest Streak</string>
    <string name="analytics_most_neglected">Most Neglected</string>

    <string-array name="priority_index">
        <item>Highest priority</item>
        <item>High priority</item>
        <item>Medium priority</item>
        <item>Low priority</item>
    </string-array>

    <string name="delete">Delete Habit</string>
    <string name="category">Category</string>
    <string name="priority">Priority</string>
    <string name="location">Locations</string>

    <string name="signed_out">Signed out</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="loading">Loading…</string>
    <string name="google_status_fmt">Google User: %s</string>

    <string name="signin_greeting">Welcome to 21.Days</string>
    <string name="skip_signin">Skip Sign In For Now</string>
    <string name="permission_rationale_title">Permissions required</string>
    <string name="permission_rationale_message">We need access to these permissions to connect to Google Fit</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="facebook_app_id">1722710931353283</string>
    <string name="fb_login_protocol_scheme">fb1722710931353283</string>
    <string name="google_sign_in_success">Signed in to Google</string>
    <string name="authentication_failed">Failed to sign in with Google</string>

    <string-array name="weekdays">
        <item>S</item>
        <item>M</item>
        <item>T</item>
        <item>W</item>
        <item>T</item>
        <item>F</item>
        <item>S</item>
    </string-array>

    <string-array name="priority_array">
        <item>Set Priority</item>
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>

    <string-array name="google_fit_array">
        <item>Distance Travelled Daily (Meters)</item>
        <item>Steps Taken Daily</item>
    </string-array>
</resources>
