<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_habit_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:orientation="vertical">

            <!--Card View: Habit Name-->
            <android.support.v7.widget.CardView
                android:id="@+id/detail_habit_name_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                card_view:cardCornerRadius="3sp"
                card_view:cardElevation="3sp">

                <TextView
                    android:id="@+id/details_habit_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textAlignment="center"
                    android:textSize="25sp" />

            </android.support.v7.widget.CardView>

            <!--Slide View: a slide button to check in-->
            <ng.max.slideview.SlideView
                android:id="@+id/slideView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                app:animateSlideText="true"
                app:buttonBackgroundColor="@color/colorPrimary"
                app:buttonImage="@drawable/arrow"
                app:reverseSlide="false"
                app:slideBackgroundColor="@color/cardview_light_background"
                app:slideText="Slide to Complete Habit"
                app:slideTextColor="@color/colorSecondaryText" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <!--Card View: days completed-->
                <android.support.v7.widget.CardView
                    android:id="@+id/details_days_completed_card_view"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:layout_weight="0.5"
                    card_view:cardCornerRadius="3sp"
                    card_view:cardElevation="3sp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5sp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/detail_days_completed_textview"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:drawableBottom="@drawable/textlines"
                            android:text="Completed Streak"
                            android:textAlignment="center"
                            android:textSize="16sp" />


                        <TextView
                            android:id="@+id/detail_days_completed"
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:layout_weight="0.5"
                            android:gravity="center"
                            android:text="11 Days"
                            android:textAlignment="center"
                            android:textSize="30sp" />


                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <!--Card View: days left-->
                <android.support.v7.widget.CardView
                    android:id="@+id/details_days_left_card_view"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:layout_weight="0.5"
                    card_view:cardCornerRadius="3sp"
                    card_view:cardElevation="3sp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5sp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/detail_days_left_textview"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:drawableBottom="@drawable/textlines"
                            android:text="Days Left"
                            android:textAlignment="center"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/detail_days_left"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:gravity="center"
                            android:text="10 Days"
                            android:textAlignment="center"
                            android:textSize="30sp" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>


            <!-- Card View: other habit info -->
            <android.support.v7.widget.CardView
                android:id="@+id/detail_category_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                card_view:cardCornerRadius="3sp"
                card_view:cardElevation="3sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5sp"
                    android:orientation="vertical">

                    <!--Category Text-->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/category"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="20sp" />
                    <!--Category-->
                    <TextView
                        android:id="@+id/details_category_textview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Life"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="21sp" />

                    <!--Priority Text-->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/priority"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="20sp" />
                    <!--Priority-->
                    <TextView
                        android:id="@+id/details_priority_textview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="High"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="21sp" />

                    <!--Location Text-->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/location"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="20sp" />
                    <!--Location-->
                    <TextView
                        android:id="@+id/details_location_textview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text=""
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="21sp" />
                </LinearLayout>

            </android.support.v7.widget.CardView>


            <!-- Delete button -->
            <Button
                android:id="@+id/delete_habit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/delete"
                android:textSize="22sp"
                android:theme="@style/ThemeOverlay.MyDarkButton" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
